# FaultSense

./: .gitignore  CMakeLists.txt  README.md  configuration.ini
documentation/: dataset-examples-and-descriptions.md  project-managment.md  testing.md
liscence/: BSD-3-Clause\ liscence.txt
src/: global-variables.h
src/feature/: configure-hsv.cc  features.cc  features.h  object-detection.cc  object-detection.h
src/feature/objects/: CannyThreshold.h  PixelCoordinates.h
src/feature/utils/: generic-utils.cc  generic-utils.h  pre-processing-utils.cc
src/feature/utils/beta/: texture-beta.cc
src/main/: common.cpp  common.h
src/main/classification/: ClassificationModel.h
src/main/data-preperation/: generate-masks.cpp  generate-masks.h  synthetic-data-generation.cpp  synthetic-data-generation.h  synthetic-features-data-generation.cpp  synthetic-features-data-generation.h  synthetic-pre-processing-data-generation.cpp  synthetic-pre-processing-data-generation.h
src/main/evaluation/: evaluation-utils.cpp  evaluation-utils.h  evaluation.cpp  evaluation.h  evaluation_internal.h
src/main/feature/: feature-extraction.cpp  feature-extraction.h  object-detection.cpp  object-detection.h  pre-processing.cpp  pre-processing.h
src/main/feature/objects/: PixelCoordinates.h  RGB.h
src/main/feature/utils/: generic-utils.cpp  generic-utils.h  pre-processing-utils.cpp  pre-processing-utils.h  pre-processing-utils_internal.h
src/main/feature/utils/beta/: gabor-filter-beta.cpp  texture-beta-dump.cpp  texture-beta.cpp  texture-beta.h
src/main/feature/utils/manual/: configure-edge.cpp
src/main/frontend/cli/: data-managment-cli.cpp  fault-sense-cli.cpp  testing-cli.cpp
src/main/frontend/cli/evaluation/: evaluation-interface.cpp  evaluation-interface.h
src/main/frontend/cli/image-viewer/: image-viewer.cpp  image-viewer.h
src/main/frontend/cli/image-viewer-ui/: image-viewer.cpp  image-viewer.h
src/main/frontend/cli/training/: training-interface.cpp  training-interface.h
src/main/frontend/gui/: main-menu.cpp  test.cpp
src/main/general/: device_info.h  generic-utils.cpp  generic-utils.h
src/main/general/file-operations/: feature-file-operations.cpp  feature-file-operations.h  generic-file-operations.cpp  generic-file-operations.h  generic-read-write.cpp  generic-read-write.h  ground-truth.cpp  image-file-operations.cpp  image-file-operations.h  read-data-labels.h  training-data.cpp  training-data.h
src/main/manual-parameter-configuration/: CMakeLists.txt  configure-edge.cpp  configure-hsv.cpp
src/main/objects/: ConfusionMatrix.h  EvaluationMetrics.h  Features.cpp  Features.h  FeaturesCollection.cpp  FeaturesCollection.h  FeaturesPipeline.h  HSV.h  MODE.h  ObjectCoordinates.h  PixelCoordinates.h  PreProcessing.h  PreProcessingPipeline.h  SampleMat.h
src/main/pre-processing/: object-detection.cpp  object-detection.h  pre-processing.cpp  pre-processing.h
src/main/pre-processing/utils/: pre-processing-utils.cpp  pre-processing-utils.h  pre-processing-utils_internal.h
src/main/pre-processing/utils/beta/: shadow-detection-removal-beta.cpp  texture-beta.h  user-select-beta.cpp
src/main/training/: train.cpp  train.h  train_internal.h
src/test/: CMakeLists.txt
src/test/evaluation/: evaluation-tests.cpp
src/test/feature/utils/: generic-utils-test.cpp  pre-processing-utils-tests.cpp
src/test/general/file-operations/: feature-file-operations-tests.cpp  ground-truth-tests.cpp  training-data-tests.cpp
src/test/objects/: Features-tests.cpp
src/test/pre-processing/utils/: pre-processing-utils-tests.cpp
src/test/training/: train-test.cpp
